--- a/.github/workflows/main_519web.yml
+++ b/.github/workflows/main_519web.yml
@@ -23,10 +23,10 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build --configuration Release
+        run: dotnet build Node/WEB --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish Node/WEB -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -62,5 +62,5 @@ jobs:
         with:
           app-name: '519web'
           slot-name: 'Production'
-          package: WEB/*
+          package: .
           
