--- a/.github/workflows/main_519web.yml
+++ b/.github/workflows/main_519web.yml
@@ -23,10 +23,14 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build Node/WEB --configuration Release
+        run: 
+        cd C_Sharp/WEB
+        dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish Node/WEB -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: 
+        cd C_Sharp/WEB
+        dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
