--- a/.github/workflows/main_519web.yml
+++ b/.github/workflows/main_519web.yml
@@ -23,14 +23,10 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: 
-          cd C_Sharp/WEB
-          dotnet build --configuration Release
+        run: dotnet build C_Sharp/WEB --configuration Release
 
       - name: dotnet publish
-        run: 
-          cd C_Sharp/WEB
-          dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish C_Sharp/WEB -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
@@ -66,5 +62,5 @@ jobs:
         with:
           app-name: '519web'
           slot-name: 'Production'
-          package: '.'
+          package: .
           
