--- a/.github/workflows/main_519functionappapi1.yml
+++ b/.github/workflows/main_519functionappapi1.yml
@@ -10,8 +10,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './C_Sharp/API1' # set this to the path to your web app project, defaults to the repository root
-  DOTNET_VERSION: '7.0.x' # set this to the dotnet version to use
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
+  DOTNET_VERSION: '8.0.x' # set this to the dotnet version to use
 
 jobs:
   build-and-deploy:
@@ -38,9 +38,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_75E914CAF3EC4929B8E15093F228AAA7 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_0E0F8063D27B44B3991EC0C099810997 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_19828446F4F24BCD8083FB54DC9A4F99 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_DB9DE5C542AD4ECFBF906A6EAAFF06DC }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_836D5FFF0E8B4A919BF3FD542264B09C }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_D791F8CBDE76457791BE5FEBAEF5BDE8 }}
 
       - name: 'Run Azure Functions Action'
         uses: Azure/functions-action@v1
