--- a/.github/workflows/deployapi2.yml
+++ b/.github/workflows/deployapi2.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and deploy Container App
         uses: azure/container-apps-deploy-action@v1
         with:
-          appSourcePath: ${{ github.workspace }}/C_Sharp/API2
+          appSourcePath: ${{ github.workspace }}/Node/API2
           acrName: anotherrregistrynvm
           containerAppName: ass2api2
           resourceGroup: 519-ass2-api2
