--- a/.github/workflows/deployapi2.yml
+++ b/.github/workflows/deployapi2.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build-and-deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     environment: production
     permissions:
       id-token: write #This is required for requesting the JWT
