--- a/.github/workflows/deployapi2.yml
+++ b/.github/workflows/deployapi2.yml
@@ -22,12 +22,12 @@ jobs:
       - name: Log in to Azure
         uses: azure/login@v1
         with:
-          creds: ${{ secrets.NEWSP }}
+          creds: ${{ secrets.NEWSP2 }}
       
       - name: Build and deploy Container App
         uses: azure/container-apps-deploy-action@v1
         with:
           appSourcePath: ${{ github.workspace }}/Node/API2
-          acrName: anotherrregistrynvm
-          containerAppName: ass2api2
+          acrName: ass2containerapp
+          containerAppName: ass2containerapp
           resourceGroup: 519-ass2-api2
