--- a/.github/workflows/main_519webnode.yml
+++ b/.github/workflows/main_519webnode.yml
@@ -14,6 +14,7 @@ on:
       - main
     paths:
       - "Node/WEB/**"
+  workflow_dispatch:
 
 env:
   AZURE_WEBAPP_NAME: assign1node # set this to your application's name
