--- a/.github/workflows/main_519webnode.yml
+++ b/.github/workflows/main_519webnode.yml
@@ -58,6 +58,7 @@ jobs:
   deploy:
     permissions:
       contents: none
+      id-token: write #This is required for requesting the JWT
     runs-on: ubuntu-latest
     needs: build
     environment:
