--- a/.github/workflows/main_519webnode.yml
+++ b/.github/workflows/main_519webnode.yml
@@ -80,5 +80,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_ASSIGN1NODE }}
+        slot-name: 'Production'
+        # publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_ASSIGN1NODE }}
         package: ${{ env.WEBAPP_PACKAGE_PATH }}
