--- a/Node/WEB/package.json
+++ b/Node/WEB/package.json
@@ -8,7 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2"
+  "dependencies":{
+    "@azure/app-configuration": "^1.5.0",
+    "express": "^4.18.2",
+    "@azure/identity": "4.0.1",
+    "@azure/keyvault-secrets": "4.8.0"
   }
 }
