--- a/Node/WEB/package.json
+++ b/Node/WEB/package.json
@@ -11,7 +11,7 @@
   "dependencies":{
     "@azure/app-configuration": "^1.5.0",
     "express": "^4.18.2",
-    "@azure/identity": "4.0.1",
-    "@azure/keyvault-secrets": "4.8.0"
+    "@azure/identity": "^4.0.1",
+    "@azure/keyvault-secrets": "^4.8.0"
   }
 }
