--- a/C_Sharp/API1/API1.csproj
+++ b/C_Sharp/API1/API1.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.1.1" />
+    <!-- Add the following package reference -->
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="4.0.5" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -16,3 +18,4 @@
     </None>
   </ItemGroup>
 </Project>
+
